--- a/project1/eureka-config-client-default/src/main/resources/bootstrap.properties
+++ b/project1/eureka-config-client-default/src/main/resources/bootstrap.properties
@@ -1,9 +1,9 @@
-spring.application.name=config-client
+spring.application.name=eureka-config-client
 spring.cloud.config.label=master
 spring.cloud.config.profile=dev
 #spring.cloud.config.uri= http://localhost:8888/
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 spring.cloud.config.discovery.enabled=true
-spring.cloud.config.discovery.serviceId=config-server
-server.port=8771
+spring.cloud.config.discovery.serviceId=eureka-config-server
+server.port=8772
