--- a/project1/eureka-config-server-default/src/main/resources/application.properties
+++ b/project1/eureka-config-server-default/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=config-server
+spring.application.name=eureka-config-server
 server.port=8770
 
-spring.cloud.config.server.git.uri=https://github.com/forezp/SpringcloudConfig/
-spring.cloud.config.server.git.searchPaths=respo
+spring.cloud.config.server.git.uri=https://github.com/zld126126/springcloud-springboot
+spring.cloud.config.server.git.searchPaths=cloud-configfile
 spring.cloud.config.label=master
 spring.cloud.config.server.git.username=
 spring.cloud.config.server.git.password=
